# JustCompose

./: .gitignore  README.md  cam.py  database_manager.py  hello.py  ideas.md  just_composing.py  just_recording.py  just_sounding.py  justcompese.db  main.py  pyproject.toml  test.py
docs/: ideas.md
